--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,9 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
+    "firebase": "^8.2.6",
+    "firebase-admin": "^11.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.19"
   }
